# SnsImageDL

./: .dockerignore  .gitignore  Dockerfile  README.md  bot.py  build_pyexiv2.sh  build_pyexiv2_on_arm.sh  confg.json  config.example.json  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup_logging.py  test.py
docker/: Dockerfile
extractor/: __init__.py  base.py  dcinside.py  exceptions.py  json_annotate.py  media.py  pixiv.py  tags.py  twitter.py  utils.py
extractor/dcinside/: __init__.py  dcinside.py
extractor/twitter/: response_typing.py  twitter.py
media_downloader/: DOCS.md  __init__.py  base.py  extractor.py  media.py  pixiv.py  response_typing.py  tags.py
media_downloader/dcinside/: dcinside.py
media_downloader/pixiv/: __init__.py  pixiv.py  response_typing.py
media_downloader/twitter/: response_typing.py  twitter.py
notebook/: notebook.ipynb
sns_image_dl/: exceptions.py  media.py  metadata.py
sns_image_dl/extractor/: __init__.py  dcinside.py  extractor.py
sns_image_dl/extractor/pixiv/: __init__.py  models.py  pixiv.py
sns_image_dl/extractor/twitter/: twitter.py
sns_image_dl/extractor/twitter/models/: tombstone.py  tweet.py
sns_image_dl/tagging/: __init__.py  exif.py  jpeg_comment.py  tagging.py  xmp.py
tests/samples/pixiv/illust/: manga_with_series.json  multi_illust.json  single_illust.json  single_illust_with_series.json
tests/samples/twitter/: age_restricted_tombstone.json  single-1200x1885.json
