[project]
name = "sns-image-dl"
version = "0.1.0"
description = ""
authors = [
    {name = "DizzyNight", email = "laffey@dizzynight.moe"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "aiohttp[speedups] (>=3.12.7,<4.0.0)",
    "pixivpy3 (>=3.7.5,<4.0.0)",
    "pyexiv2 (>=2.15.4,<3.0.0)",
    "filetype (>=1.2.0,<2.0.0)",
    "msgspec (>=0.19.0,<0.20.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
