[project]
name = "snsimagedl"
version = "1.0.0"
description = ""
requires-python = ">=3.14,<4.0"
dependencies = [
    "snsimagedl-lib",
    "snsimagedl-twitter",
    "snsimagedl-pixiv",
    "snsimagedl-dcinside",
    "snsimagedl-bot"
]
authors = [
    { name = "DizzyNight", email = "laffey@dizzynight.moe" }
]
license = { text = "Unlicense" }
readme = "REAME.md"

[tool.uv.sources]
snsimagedl-lib = { workspace = true }
snsimagedl-twitter = { workspace = true }
snsimagedl-pixiv = { workspace = true }
snsimagedl-dcinside = { workspace = true }
snsimagedl-bot = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]
